@@ -7,6 +7,8 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 
 import java.time.LocalDateTime;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @Getter
 @NoArgsConstructor
@@ -20,7 +22,7 @@ public class PostResponseDTO {
     private Long category_id;
     private String status;
     private String email;
-    // private List<String> imageUrls;
+    private List<String> imageUrls;
 
     @Builder
     public PostResponseDTO(Post post) {
@@ -32,8 +34,8 @@ public class PostResponseDTO {
         this.category_id = post.getCategory_id();
         this.status = post.getStatus();
         this.email = post.getUser().getEmail();
-        //this.imageUrls = post.getImages().stream()
-        //        .map(PostImage::getUrl)
-        //        .toList();
+        this.imageUrls = post.getPostImages().stream()
+                .map(PostImage::getUrl)
+                .collect(Collectors.toList());
     }
 }
